# race_track_maker

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
launch/: path_publisher.launch.py
race_track_maker/: cone.stl  cone_yellow.stl  draw_race_track.py  path_publisher.py  race_track.csv  race_track.world  race_track_maker.py  race_track_with_walls.world  test_create_gazebo_with_stl.py
tracks/: race_track.csv  v1.csv  v1.world  v2.csv  v2.world  v3.csv  v3.world
